# liblithium

./: CMakeLists.txt  LICENSE  README.markdown
include/: lithium.h  rubidium.h  sodium.h
include/lithium/: crypto_aead_aegis128l.h  crypto_aead_aegis256.h  crypto_aead_aes256gcm.h  crypto_auth.h  crypto_box_curve25519xchacha20poly1305.h  crypto_box_curve25519xsalsa20poly1305.h  crypto_core_hchacha20.h  crypto_core_hsalsa20.h  crypto_core_ristretto255.h  crypto_core_salsa20.h  crypto_kdf.h  crypto_kdf_hkdf_sha256.h  crypto_onetimeauth.h  crypto_pwhash_argon2id.h  crypto_pwhash_scryptsalsa208sha256.h  crypto_scalarmult.h  crypto_secretbox.h  crypto_shorthash_siphash24.h  crypto_sign.h  crypto_stream_chacha20.h  crypto_stream_salsa20.h  crypto_stream_salsa2012.h  crypto_stream_salsa208.h  crypto_stream_xchacha20.h  crypto_verify_16.h  crypto_verify_32.h  randombytes.h  utils.h
include/lithium/private/: common.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h  mutex.h  quirks.h
include/rubidium/: core.h  crypto_aead_chacha20poly1305.h  crypto_aead_xchacha20poly1305.h  crypto_auth_hmacsha512256.h  crypto_core_salsa2012.h  crypto_generichash.h  crypto_hash.h  crypto_hash_sha256.h  crypto_kx.h  crypto_onetimeauth_poly1305.h  crypto_pwhash.h  crypto_scalarmult_curve25519.h  crypto_scalarmult_ed25519.h  crypto_shorthash.h  crypto_stream.h  export.h  randombytes.h  randombytes_internal_random.h  randombytes_sysrandom.h  rubidium_aead_aegis128l.h  rubidium_aead_aegis256.h  rubidium_aead_aes256gcm.h  rubidium_aead_chacha20poly1305.h  rubidium_aead_xchacha20poly1305.h  rubidium_auth.h  rubidium_auth_hmacsha256.h  rubidium_auth_hmacsha512.h  rubidium_auth_hmacsha512256.h  rubidium_box_curve25519xchacha20poly1305.h  rubidium_box_curve25519xsalsa20poly1305.h  rubidium_core_ed25519.h  rubidium_core_hchacha20.h  rubidium_core_hsalsa20.h  rubidium_core_ristretto255.h  rubidium_core_salsa20.h  rubidium_core_salsa2012.h  rubidium_core_salsa208.h  rubidium_generichash.h  rubidium_generichash_blake2b.h  rubidium_hash.h  (+37 more)
include/rubidium/private/: chacha20_ietf_ext.h  common.h  ed25519_ref10.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h  implementations.h  mutex.h  quirks.h  sse2_64_32.h
include/sodium/: crypto_aead_aes256gcm.h
src/blake2b/: blake2.h  blake2b-compress-ref.cpp  blake2b-ref.cpp  generichash_blake2.cpp  generichash_blake2b.cpp
src/blake2b/ref/: blake2b-compress-avx2.cpp  blake2b-compress-ref.cpp  blake2b-compress-ssse3.cpp
src/crypto_aead/aegis128l/: aead_aegis128l.cpp
src/crypto_aead/aes256gcm/aesni/: aead_aes256gcm_aesni.cpp
src/crypto_box/: crypto_box_easy.cpp
src/crypto_box/curve25519xchacha20poly1305/: box_curve25519xchacha20poly1305.cpp  box_seal_curve25519xchacha20poly1305.cpp
src/crypto_pwhash/argon2/: argon2-core.cpp  argon2-encoding.cpp
src/crypto_secretbox/xchacha20poly1305/: secretbox_xchacha20poly1305.cpp
src/crypto_secretstream/xchacha20poly1305/: secretstream_xchacha20poly1305.cpp
src/crypto_stream/chacha20/: stream_chacha20.cpp
src/lithium/: core.cpp  utils.cpp  version.cpp
src/randombytes/: randombytes.cpp
src/randombytes/internal/: randombytes_internal_random.cpp
src/randombytes/sysrandom/: randombytes_sysrandom.cpp
src/rubidium/: codecs.cpp  core.cpp  runtime.cpp  utils.cpp  version.cpp
src/rubidium_aead/aegis128l/: aead_aegis128l.cpp
src/rubidium_aead/aegis256/: aead_aegis256.cpp
src/rubidium_auth/: rubidium_auth.cpp
src/rubidium_auth/hmacsha256/: auth_hmacsha256.cpp
src/rubidium_auth/hmacsha512/: auth_hmacsha512.cpp
src/rubidium_auth/hmacsha512256/: auth_hmacsha512256.cpp
src/rubidium_box/curve25519xchacha20poly1305/: box_curve25519xchacha20poly1305.cpp  box_seal_curve25519xchacha20poly1305.cpp
src/rubidium_box/curve25519xsalsa20poly1305/: box_curve25519xsalsa20poly1305.cpp
src/rubidium_core/ed25519/: core_ed25519.cpp  core_h2c.cpp  core_h2c.h  core_ristretto255.cpp
src/rubidium_core/hchacha20/: core_hchacha20.cpp
src/rubidium_core/hsalsa20/: core_hsalsa20.cpp
src/rubidium_generichash/blake2b/: generichash_blake2.cpp
src/rubidium_hash/: rubidium_hash.cpp
src/rubidium_hash/sha256/: hash_sha256.cpp
src/rubidium_hash/sha512/: hash_sha512.cpp
src/rubidium_kdf/: rubidium_kdf.cpp
src/rubidium_kdf/blake2b/: kdf_blake2b.cpp
src/rubidium_kdf/hkdf/: kdf_hkdf_sha256.cpp  kdf_hkdf_sha512.cpp
src/rubidium_onetimeauth/: rubidium_onetimeauth.cpp
src/rubidium_onetimeauth/poly1305/: onetimeauth_poly1305.cpp  onetimeauth_poly1305.h
src/rubidium_pwhash/: rubidium_pwhash.cpp
src/rubidium_pwhash/argon2/: argon2-core.cpp  argon2-core.h  argon2-encoding.cpp  argon2-encoding.h  argon2-fill-block-avx2.cpp  argon2-fill-block-avx512f.cpp  argon2-fill-block-ref.cpp  argon2-fill-block-ssse3.cpp  argon2.cpp  argon2.h  blake2b-long.cpp  blake2b-long.h  blamka-round-avx2.h  blamka-round-ref.h  pwhash_argon2i.cpp  pwhash_argon2id.cpp
src/rubidium_pwhash/scryptsalsa208sha256/: pbkdf2-sha256.cpp  pbkdf2-sha256.h  pwhash_scryptsalsa208sha256.cpp  rubidium_scrypt-common.cpp  rubidium_scrypt.h  scrypt_platform.cpp
src/rubidium_scalarmult/curve25519/: scalarmult_curve25519.cpp  scalarmult_curve25519.h
src/rubidium_secretbox/: rubidium_secretbox.cpp  rubidium_secretbox_easy.cpp
src/rubidium_secretbox/xchacha20poly1305/: secretbox_xchacha20poly1305.cpp
src/rubidium_secretbox/xsalsa20poly1305/: secretbox_xsalsa20poly1305.cpp
src/rubidium_secretstream/xchacha20poly1305/: secretstream_xchacha20poly1305.cpp
src/rubidium_shorthash/: rubidium_shorthash.cpp
src/rubidium_shorthash/siphash24/: shorthash_siphash24.cpp  shorthash_siphashx24.cpp
src/rubidium_sign/ed25519/: sign_ed25519.cpp
src/rubidium_stream/chacha20/: stream_chacha20.cpp  stream_chacha20.h
src/rubidium_stream/salsa20/: stream_salsa20.cpp  stream_salsa20.h
src/rubidium_stream/salsa2012/: stream_salsa2012.cpp
src/rubidium_stream/salsa208/: stream_salsa208.cpp
src/rubidium_stream/xchacha20/: stream_xchacha20.cpp
src/rubidium_stream/xsalsa20/: stream_xsalsa20.cpp
src/rubidium_verify/rubidium/: verify.cpp
src/sodium/: core.cpp  utils.cpp
(+83 files in other folders)
