cmake_minimum_required(VERSION 3.18)

project(lithium)
add_library(lithium)
target_include_directories(lithium PRIVATE include/sodium)

target_sources(lithium
        PRIVATE
        src/crypto_generichash/blake2b/ref/blake2b-compress-ref.cpp
        src/crypto_generichash/blake2b/ref/blake2b-compress-ssse3.cpp
        src/crypto_generichash/blake2b/ref/blake2b-compress-avx2.cpp
        src/crypto_generichash/blake2b/ref/blake2b-compress-sse41.cpp
        src/crypto_generichash/blake2b/ref/generichash_blake2b.cpp
        src/crypto_generichash/blake2b/ref/blake2b-ref.cpp
        src/crypto_generichash/blake2b/generichash_blake2.cpp
        src/crypto_generichash/crypto_generichash.cpp
        src/crypto_kx/crypto_kx.cpp
        src/crypto_sign/crypto_sign.cpp
        src/crypto_sign/ed25519/sign_ed25519.cpp
        src/crypto_sign/ed25519/ref10/sign.cpp
        src/crypto_sign/ed25519/ref10/keypair.cpp
        src/crypto_sign/ed25519/ref10/open.cpp
        src/crypto_secretbox/xsalsa20poly1305/secretbox_xsalsa20poly1305.cpp
        src/crypto_secretbox/xchacha20poly1305/secretbox_xchacha20poly1305.cpp
        src/crypto_secretbox/crypto_secretbox.cpp
        src/crypto_secretbox/crypto_secretbox_easy.cpp
        src/crypto_pwhash/crypto_pwhash.cpp
        src/crypto_pwhash/argon2/blake2b-long.cpp
        src/crypto_pwhash/argon2/argon2-core.cpp
        src/crypto_pwhash/argon2/argon2-fill-block-avx512f.cpp
        src/crypto_pwhash/argon2/argon2-fill-block-ref.cpp
        src/crypto_pwhash/argon2/argon2-fill-block-ssse3.cpp
        src/crypto_pwhash/argon2/pwhash_argon2i.cpp
        src/crypto_pwhash/argon2/pwhash_argon2id.cpp
        src/crypto_pwhash/argon2/argon2.cpp
        src/crypto_pwhash/argon2/argon2-fill-block-avx2.cpp
        src/crypto_pwhash/argon2/argon2-encoding.cpp
        src/crypto_pwhash/scryptsalsa208sha256/scrypt_platform.cpp
        src/crypto_pwhash/scryptsalsa208sha256/crypto_scrypt-common.cpp
        src/crypto_pwhash/scryptsalsa208sha256/nosse/pwhash_scryptsalsa208sha256_nosse.cpp
        src/crypto_pwhash/scryptsalsa208sha256/pwhash_scryptsalsa208sha256.cpp
        src/crypto_pwhash/scryptsalsa208sha256/sse/pwhash_scryptsalsa208sha256_sse.cpp
        src/crypto_pwhash/scryptsalsa208sha256/pbkdf2-sha256.cpp
        src/crypto_verify/sodium/verify.cpp
        src/crypto_auth/hmacsha512/auth_hmacsha512.cpp
        src/crypto_auth/hmacsha512256/auth_hmacsha512256.cpp
        src/crypto_auth/crypto_auth.cpp
        src/crypto_auth/hmacsha256/auth_hmacsha256.cpp
        src/aead_chacha20poly1305.cpp
        src/crypto_kdf/blake2b/kdf_blake2b.cpp
        src/crypto_kdf/hkdf/kdf_hkdf_sha256.cpp
        src/crypto_kdf/hkdf/kdf_hkdf_sha512.cpp
        src/crypto_kdf/crypto_kdf.cpp
        src/crypto_shorthash/crypto_shorthash.cpp
        src/crypto_shorthash/siphash24/ref/shorthash_siphashx24_ref.cpp
        src/crypto_shorthash/siphash24/ref/shorthash_siphash24_ref.cpp
        src/crypto_shorthash/siphash24/shorthash_siphash24.cpp
        src/crypto_shorthash/siphash24/shorthash_siphashx24.cpp
        src/crypto_scalarmult/crypto_scalarmult.cpp
        src/crypto_scalarmult/ristretto255/ref10/scalarmult_ristretto255_ref10.cpp
        src/crypto_scalarmult/ed25519/ref10/scalarmult_ed25519_ref10.cpp
        src/crypto_scalarmult/curve25519/sandy2x/curve25519_sandy2x.cpp
        src/crypto_scalarmult/curve25519/sandy2x/fe_frombytes_sandy2x.cpp
        src/crypto_scalarmult/curve25519/sandy2x/fe51_invert.cpp
        src/crypto_scalarmult/curve25519/scalarmult_curve25519.cpp
        src/crypto_scalarmult/curve25519/ref10/x25519_ref10.cpp
        src/crypto_onetimeauth/crypto_onetimeauth.cpp
        src/crypto_onetimeauth/poly1305/donna/poly1305_donna.cpp
        src/crypto_onetimeauth/poly1305/sse2/poly1305_sse2.cpp
        src/crypto_onetimeauth/poly1305/onetimeauth_poly1305.cpp
        src/randombytes/sysrandom/randombytes_sysrandom.cpp
        src/randombytes/internal/randombytes_internal_random.cpp
        src/randombytes/randombytes.cpp
        src/crypto_box/curve25519xsalsa20poly1305/box_curve25519xsalsa20poly1305.cpp
        src/crypto_box/curve25519xchacha20poly1305/box_curve25519xchacha20poly1305.cpp
        src/crypto_box/curve25519xchacha20poly1305/box_seal_curve25519xchacha20poly1305.cpp
        src/sodium/codecs.cpp
        src/sodium/runtime.cpp
        src/sodium/core.cpp
        src/sodium/utils.cpp
        src/sodium/version.cpp
        src/crypto_stream/xchacha20/stream_xchacha20.cpp
        src/crypto_stream/chacha20/ref/chacha20_ref.cpp
        src/crypto_stream/chacha20/stream_chacha20.cpp
        src/crypto_stream/chacha20/dolbeau/chacha20_dolbeau-avx2.cpp
        src/crypto_stream/chacha20/dolbeau/chacha20_dolbeau-ssse3.cpp
        src/crypto_stream/salsa20/ref/salsa20_ref.cpp
        src/crypto_stream/salsa20/stream_salsa20.cpp
        src/crypto_stream/salsa20/xmm6int/salsa20_xmm6int-avx2.cpp
        src/crypto_stream/salsa20/xmm6int/salsa20_xmm6int-sse2.cpp
        src/crypto_stream/salsa20/xmm6/salsa20_xmm6.cpp
        src/crypto_stream/crypto_stream.cpp
        src/crypto_stream/salsa2012/ref/stream_salsa2012_ref.cpp
        src/crypto_stream/salsa2012/stream_salsa2012.cpp
        src/crypto_stream/salsa208/ref/stream_salsa208_ref.cpp
        src/crypto_stream/salsa208/stream_salsa208.cpp
        src/crypto_stream/xsalsa20/stream_xsalsa20.cpp
        src/crypto_hash/sha512/hash_sha512.cpp
        src/crypto_hash/sha512/cp/hash_sha512_cp.cpp
        src/crypto_hash/sha256/hash_sha256.cpp
        src/crypto_hash/sha256/cp/hash_sha256_cp.cpp
        src/crypto_hash/crypto_hash.cpp
        src/crypto_aead/xchacha20poly1305/sodium/aead_xchacha20poly1305.cpp
        src/crypto_aead/aegis128l/aead_aegis128l.cpp
        src/crypto_aead/aegis128l/aesni/aead_aegis128l_aesni.cpp
        src/crypto_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.cpp
        src/crypto_aead/aegis256/aead_aegis256.cpp
        src/crypto_aead/aegis256/aesni/aead_aegis256_aesni.cpp
        src/crypto_aead/aegis256/armcrypto/aead_aegis256_armcrypto.cpp
        src/crypto_aead/aes256gcm/aesni/aead_aes256gcm_aesni.cpp
        src/crypto_secretstream/xchacha20poly1305/secretstream_xchacha20poly1305.cpp
        src/crypto_core/salsa/ref/core_salsa_ref.cpp
        src/crypto_core/hchacha20/core_hchacha20.cpp
        src/crypto_core/hsalsa20/ref2/core_hsalsa20_ref2.cpp
        src/crypto_core/hsalsa20/core_hsalsa20.cpp
        src/crypto_core/ed25519/core_ed25519.cpp
        src/crypto_core/ed25519/core_ristretto255.cpp
        src/crypto_core/ed25519/ref10/ed25519_ref10.cpp
        src/crypto_core/ed25519/core_h2c.cpp
        )