cmake_minimum_required(VERSION 3.18)

project(rubidium)
add_library(rubidium)
target_include_directories(rubidium PRIVATE include/rubidium)
target_include_directories(rubidium PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
        )

set(RUBIDIUM_HEADERS
        include/rubidium/rubidium_stream_salsa2012.h
        include/rubidium/rubidium_auth.h
        include/rubidium/utils.h
        include/rubidium/rubidium_core_hchacha20.h
        include/rubidium/rubidium_aead_aegis256.h
        include/rubidium/rubidium_hash_sha512.h
        include/rubidium/export.h
        include/rubidium/rubidium_core_salsa20.h
        include/rubidium/rubidium_shorthash_siphash24.h
        include/rubidium/randombytes.h
        include/rubidium/rubidium_hash_sha256.h
        include/rubidium/rubidium_stream.h
        include/rubidium/rubidium_auth_hmacsha512.h
        include/rubidium/rubidium_aead_xchacha20poly1305.h
        include/rubidium/rubidium_stream_salsa20.h
        include/rubidium/rubidium_onetimeauth_poly1305.h
        include/rubidium/rubidium_scalarmult_ristretto255.h
        include/rubidium/rubidium_kx.h
        include/rubidium/rubidium_hash.h
        include/rubidium/rubidium_sign.h
        include/rubidium/rubidium_kdf.h
        include/rubidium/rubidium_auth_hmacsha256.h
        include/rubidium/rubidium_verify_32.h
        include/rubidium/rubidium_core_ristretto255.h
        include/rubidium/rubidium_stream_xchacha20.h
        include/rubidium/rubidium_core_salsa208.h
        include/rubidium/rubidium_auth_hmacsha512256.h
        include/rubidium/rubidium_aead_aegis128l.h
        include/rubidium/rubidium_aead_chacha20poly1305.h
        include/rubidium/runtime.h
        include/rubidium/rubidium_stream_salsa208.h
        include/rubidium/rubidium_aead_aes256gcm.h
        include/rubidium/rubidium_core_salsa2012.h
        include/rubidium/rubidium_secretbox_xchacha20poly1305.h
        include/rubidium/rubidium_scalarmult.h
        include/rubidium/rubidium_pwhash.h
        include/rubidium/private/ed25519_ref10.h
        include/rubidium/private/ed25519_ref10_fe_25_5.h
        include/rubidium/private/ed25519_ref10_fe_51.h
        include/rubidium/private/sse2_64_32.h
        include/rubidium/private/common.h
        include/rubidium/private/mutex.h
        include/rubidium/private/chacha20_ietf_ext.h
        include/rubidium/private/implementations.h
        include/rubidium/rubidium_verify_16.h
        include/rubidium/rubidium_stream_chacha20.h
        include/rubidium/rubidium_stream_xsalsa20.h
        include/rubidium/rubidium_core_hsalsa20.h
        include/rubidium/rubidium_kdf_blake2b.h
        include/rubidium/rubidium_scalarmult_curve25519.h
        include/rubidium/rubidium_shorthash.h
        include/rubidium/rubidium_kdf_hkdf_sha256.h
        include/rubidium/rubidium_pwhash_argon2id.h
        include/rubidium/rubidium_secretstream_xchacha20poly1305.h
        include/rubidium/rubidium_pwhash_scryptsalsa208sha256.h
        include/rubidium/rubidium_sign_ed25519.h
        include/rubidium/rubidium_onetimeauth.h
        include/rubidium/rubidium_verify_64.h
        include/rubidium/rubidium_box_curve25519xchacha20poly1305.h
        include/rubidium/rubidium_core_ed25519.h
        include/rubidium/rubidium_kdf_hkdf_sha512.h
        include/rubidium/rubidium_pwhash_argon2i.h
        include/rubidium/rubidium_secretbox_xsalsa20poly1305.h
        include/rubidium/rubidium_secretbox.h
        include/rubidium/rubidium_scalarmult_ed25519.h
        include/rubidium/rubidium_box_curve25519xsalsa20poly1305.h
        include/rubidium/rubidium_generichash_blake2b.h
        #
        )
include(CheckIncludeFile)
check_include_file(emmintrin.h HAVE_EMMINTRIN_H)



install(FILES ${RUBIDIUM_HEADERS} DESTINATION include/rubidium)
install(FILES include/rubidium.h DESTINATION include)
target_sources(rubidium
        PRIVATE
        include/rubidium.h
        ${RUBIDIUM_HEADERS}
        src/blake2b/blake2b-compress-ref.cpp
        src/blake2b/generichash_blake2b.cpp
        src/blake2b/blake2b-ref.cpp
        src/blake2b/generichash_blake2.cpp
        src/rubidium_sign/ed25519/sign_ed25519.cpp
        src/rubidium_sign/ed25519/ref10/sign.cpp
        src/rubidium_sign/ed25519/ref10/keypair.cpp
        src/rubidium_sign/ed25519/ref10/open.cpp
        src/rubidium_secretbox/xsalsa20poly1305/secretbox_xsalsa20poly1305.cpp
        src/rubidium_secretbox/xchacha20poly1305/secretbox_xchacha20poly1305.cpp
        src/rubidium_secretbox/rubidium_secretbox.cpp
        src/rubidium_secretbox/rubidium_secretbox_easy.cpp
        src/rubidium_pwhash/rubidium_pwhash.cpp
        src/rubidium_pwhash/argon2/blake2b-long.cpp
        src/rubidium_pwhash/argon2/argon2-core.cpp
        src/rubidium_pwhash/argon2/argon2-fill-block-avx512f.cpp
        src/rubidium_pwhash/argon2/argon2-fill-block-ref.cpp
        src/rubidium_pwhash/argon2/argon2-fill-block-ssse3.cpp
        src/rubidium_pwhash/argon2/pwhash_argon2i.cpp
        src/rubidium_pwhash/argon2/pwhash_argon2id.cpp
        src/rubidium_pwhash/argon2/argon2.cpp
        src/rubidium_pwhash/argon2/argon2-fill-block-avx2.cpp
        src/rubidium_pwhash/argon2/argon2-encoding.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/scrypt_platform.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/rubidium_scrypt-common.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/nosse/pwhash_scryptsalsa208sha256_nosse.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/pwhash_scryptsalsa208sha256.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/sse/pwhash_scryptsalsa208sha256_sse.cpp
        src/rubidium_pwhash/scryptsalsa208sha256/pbkdf2-sha256.cpp
        src/rubidium_verify/rubidium/verify.cpp
        src/rubidium_auth/hmacsha512/auth_hmacsha512.cpp
        src/rubidium_auth/hmacsha512256/auth_hmacsha512256.cpp
        src/rubidium_auth/rubidium_auth.cpp
        src/rubidium_auth/hmacsha256/auth_hmacsha256.cpp
        src/rubidium_aead/xchacha20poly1305/rubidium/aead_chacha20poly1305.cpp
        src/rubidium_kdf/blake2b/kdf_blake2b.cpp
        src/rubidium_kdf/hkdf/kdf_hkdf_sha256.cpp
        src/rubidium_kdf/hkdf/kdf_hkdf_sha512.cpp
        src/rubidium_kdf/rubidium_kdf.cpp
        src/rubidium_shorthash/rubidium_shorthash.cpp
        src/rubidium_shorthash/siphash24/ref/shorthash_siphashx24_ref.cpp
        src/rubidium_shorthash/siphash24/ref/shorthash_siphash24_ref.cpp
        src/rubidium_shorthash/siphash24/shorthash_siphash24.cpp
        src/rubidium_shorthash/siphash24/shorthash_siphashx24.cpp
        src/rubidium_scalarmult/ristretto255/ref10/scalarmult_ristretto255_ref10.cpp
        src/rubidium_scalarmult/ed25519/ref10/scalarmult_ed25519_ref10.cpp
        src/rubidium_scalarmult/curve25519/sandy2x/curve25519_sandy2x.cpp
        src/rubidium_scalarmult/curve25519/sandy2x/fe_frombytes_sandy2x.cpp
        src/rubidium_scalarmult/curve25519/sandy2x/fe51_invert.cpp
        src/rubidium_scalarmult/curve25519/scalarmult_curve25519.cpp
        src/rubidium_scalarmult/curve25519/ref10/x25519_ref10.cpp
        src/rubidium_onetimeauth/rubidium_onetimeauth.cpp
        src/rubidium_onetimeauth/poly1305/donna/poly1305_donna.cpp
        src/rubidium_onetimeauth/poly1305/sse2/poly1305_sse2.cpp
        src/rubidium_onetimeauth/poly1305/onetimeauth_poly1305.cpp
        src/randombytes/randombytes.cpp
        src/rubidium_box/curve25519xsalsa20poly1305/box_curve25519xsalsa20poly1305.cpp
        src/rubidium_box/curve25519xchacha20poly1305/box_curve25519xchacha20poly1305.cpp
        src/rubidium_box/curve25519xchacha20poly1305/box_seal_curve25519xchacha20poly1305.cpp
        src/rubidium_stream/xchacha20/stream_xchacha20.cpp
        src/rubidium_stream/chacha20/ref/chacha20_ref.cpp
        src/rubidium_stream/chacha20/stream_chacha20.cpp
        src/rubidium_stream/chacha20/dolbeau/chacha20_dolbeau-avx2.cpp
        src/rubidium_stream/chacha20/dolbeau/chacha20_dolbeau-ssse3.cpp
        src/rubidium_stream/salsa20/ref/salsa20_ref.cpp
        src/rubidium_stream/salsa20/stream_salsa20.cpp
        src/rubidium_stream/salsa20/xmm6int/salsa20_xmm6int-avx2.cpp
        src/rubidium_stream/salsa20/xmm6int/salsa20_xmm6int-sse2.cpp
        src/rubidium_stream/salsa20/xmm6/salsa20_xmm6.cpp
        src/rubidium_stream/salsa2012/ref/stream_salsa2012_ref.cpp
        src/rubidium_stream/salsa2012/stream_salsa2012.cpp
        src/rubidium_stream/salsa208/ref/stream_salsa208_ref.cpp
        src/rubidium_stream/salsa208/stream_salsa208.cpp
        src/rubidium_stream/xsalsa20/stream_xsalsa20.cpp
        src/rubidium_hash/sha512/hash_sha512.cpp
        src/rubidium_hash/sha512/cp/hash_sha512_cp.cpp
        src/rubidium_hash/sha256/hash_sha256.cpp
        src/rubidium_hash/sha256/cp/hash_sha256_cp.cpp
        src/rubidium_hash/rubidium_hash.cpp
        src/rubidium_aead/xchacha20poly1305/rubidium/aead_xchacha20poly1305.cpp
        src/rubidium_aead/aegis128l/aead_aegis128l.cpp
        src/rubidium_aead/aegis128l/aesni/aead_aegis128l_aesni.cpp
        src/rubidium_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.cpp
        src/rubidium_aead/aegis256/aead_aegis256.cpp
        src/rubidium_aead/aegis256/aesni/aead_aegis256_aesni.cpp
        src/rubidium_aead/aegis256/armcrypto/aead_aegis256_armcrypto.cpp
        src/rubidium_aead/aes256gcm/aesni/aead_aes256gcm_aesni.cpp
        src/rubidium_secretstream/xchacha20poly1305/secretstream_xchacha20poly1305.cpp
        src/rubidium_core/salsa/ref/core_salsa_ref.cpp
        src/rubidium_core/hchacha20/core_hchacha20.cpp
        src/rubidium_core/hsalsa20/ref2/core_hsalsa20_ref2.cpp
        src/rubidium_core/hsalsa20/core_hsalsa20.cpp
        src/rubidium_core/ed25519/core_ed25519.cpp
        src/rubidium_core/ed25519/core_ristretto255.cpp
        src/rubidium_core/ed25519/ref10/ed25519_ref10.cpp
        src/rubidium_core/ed25519/core_h2c.cpp
        )

install(TARGETS rubidium EXPORT s DESTINATION lib)
install(EXPORT s DESTINATION cmake FILE rubidium-config.cmake NAMESPACE Rubidium::)